[package]
name = "gabe_ui"
version = "0.1.0"
authors = ["Ryan Littleton <ryan.littleton0@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"

[dependencies.sdl2]
version = "0.34"
features = ["ttf", "image"]
